samples/_failures_safe/1761616703_4ead5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43f75a31.c: In function ‘main’:
./samples/SAFE/__tmp_43f75a31.c:154:13: error: expected declaration or statement at end of input
  154 |             case 2: {
      |             ^~~~
./samples/SAFE/__tmp_43f75a31.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43f75a31.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43f75a31.c:154:13: error: expected declaration or statement at end of input
